<resources>
    <string name="app_name">Code Simulator and Checker</string>
    <string name="title_home">Home</string>
    <string name="title_courses">Courses</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account"> Account </string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register"> Register </string>
    <string name="action_sign_in_short">Log in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_preview"> Text Preview</string>
    <string name="logout"> Logout </string>
    <string name="prompt_username"> Username </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login_prompt"> Login using your username </string>
    <string name="register_prompt"> Please fill all the fields </string>
    <string name="firstname_prompt"> First Name </string>
    <string name="lastname_prompt"> Last Name </string>
    <string name="email_prompt"> Email </string>
    <string name="cpassword_prompt"> Confirm Password </string>
    <string name="terms"> By clicking register you are agreeing to our terms. </string>
    <string name="welcome"> Welcome, </string>
    <string name="acc_settigns"> Update Account </string>
    <string name="enrolled_courses"> Enrolled Courses </string>
    <string name="assignments"> Assignments </string>
    <string name="activities"> Exercise </string>
    <string name="enroll_course"> Enroll Course </string>
    <string name="search_course"> Search Course </string>
    <string name="search"> Search </string>
    <string name="messages"> Messages </string>
    <string name="code_playground"> Code </string>
    <string name="playground"> Playground </string>
    <string name="playground_subtitle"> You can test your code here. </string>
    <string name="source_code"> Code </string>
    <string name="result"> Result </string>
    <string name="compile"> Run  </string>
    <string name="load_from_file"> Load File </string>
    <string name="placeholder">public class  Solution { \n\t public static void main(String[] args) { \n\t\t  System.out.println(\"Hello World\"); \n \t } \n } </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet"> No response. Please check your internet connection. </string>
    <string name="invalid_credentials"> Invalid credentials </string>
    <string name="view_all"> View All </string>
    <string name="registration_success"> Submitted </string>
    <string name="registration_success_sub"> Please wait for the confirmation of your registration. </string>
</resources>
