<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_firstname"
        style="@style/FontHeading"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/title_home"
        android:theme="@style/FontHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/styl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/styl"
        style="@style/FontHeadingLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/FontHeadingSm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enrolled_courses"
        app:layout_constraintStart_toStartOf="@+id/styl"
        app:layout_constraintTop_toBottomOf="@+id/styl" />

    <TextView
        android:id="@+id/textView7"
        style="@style/FontHeadingSm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/assignments"
        app:layout_constraintStart_toStartOf="@+id/styl"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView3" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="0dp"
        android:layout_height="@dimen/courses_height"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/home_firstname"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        android:fillViewport="true"
        android:scrollbars=""
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="309dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="Button" />

            <Button
                android:id="@+id/button5"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>